--- a/home/index.html
+++ b/home/index.html
@@ -135,7 +135,7 @@
 									</div>
 									<div class="row mt-1">
 										<div class="col">
-											<label class="form-label">Ask about recent pint prices or tell me about a new one<!--Ask me about pint prices or tell me about a new one-->
+											<label class="form-label">Ask about pint prices or tell me about a new one<!--Ask me about pint prices or tell me about a new one-->
 												<a href="#" class="link-info text-decoration-none" data-bs-toggle="collapse" data-bs-target="#agent_info">
 													<span class="ms-2">
 														<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-info-square text-secondary" viewBox="0 0 16 16">
