--- a/home/index.html
+++ b/home/index.html
@@ -125,7 +125,7 @@
 									</div>
 									<div class="row mt-2" >
 										<div class="col">
-											<span>Recently in pubs, {{head_stat_avgs}}</span>
+											<span>{{head_stat_avgs}}</span>
 										</div>
 									</div>
 									<div class="row mt-4">
@@ -945,6 +945,43 @@
 
 				$scope.upd_location_stats = function()
 				{
+					for (ctry in $scope.country_list)
+					{
+						if ($scope.country_list[ctry].name == $scope.home_country)
+						{
+							$scope.home_ccy = $scope.country_list[ctry].ccy;
+						}
+					}
+
+					for (ccy in $scope.frm_prices.ccy_list)
+					{
+						if ($scope.frm_prices.ccy_list[ccy].code == $scope.home_ccy)
+						{
+							$scope.home_ccy_symbol = $scope.frm_prices.ccy_list[ccy].symbol;
+							if ($scope.home_ccy_symbol.length > 1)
+							{
+								$scope.home_ccy_symbol = $scope.home_ccy_symbol + ' ';
+							}
+						}	
+					}
+					$scope.frm_prices.display_ccy = $scope.home_ccy;
+					$scope.frm_prices.display_ccy_symbol = $scope.home_ccy_symbol;
+					$scope.frm_prices.display_fxrate = 1
+
+					$scope.working_head_stats = true;
+					var stats = [];
+
+					url = $scope.service_path + '/beerprice';
+					$scope.http_get(url, 'page=1&pageSize=5&pubCountry=' + $scope.home_country, function(response)
+						{
+							$scope.head_stat_latest = response.data['beer-price'];
+							$scope.working_head_stats = false
+						}, function(response)
+						{
+							$scope.working_head_stats = false
+						});
+
+					console.log($scope.home_country+ ','+$scope.home_city+','+$scope.home_town+','+$scope.home_pc, +','+ $scope.home_ccy_symbol + $scope.home_ccy);
 
 					var params = 'style=small';
 					params = params + '&pubCountry=' + $scope.home_country;
@@ -963,94 +1000,60 @@
 					$scope.http_get($scope.service_path + '/beerpricestats/' + qry, params, function(response)
 						{
 							stats = response.data['beer-price-stats'];
-							if (stats.length==0)
+							$scope.head_stat_avgs = '';
+							$scope.head_stat_tot = 0;
+							for (i = 0; i < stats.length; i++)
 							{
-								$scope.head_stat_avgs = 'Be the first to submit a pub pint price in ' & $scope.home_city;
-								$scope.head_stat_tot = 0;
-								$scope.head_stat_tot2 = '';
+								$scope.head_stat_tot = $scope.head_stat_tot + stats[i]['count'];
 							}
-							else
+							totyr = 0;
+							minyr = ''
+							for (i = 0; i < stats.length; i++)
 							{
-								$scope.head_stat_avgs = '';
-								$scope.head_stat_tot = 0;
-								for (i = 0; i < stats.length; i++)
+								totyr = totyr + stats[i]['recent-count'];
+								if (minyr == '' || stats[i]['recent-min-date'] < minyr)
 								{
-									$scope.head_stat_tot = $scope.head_stat_tot + stats[i]['count'];
+									minyr = stats[i]['recent-min-date']
 								}
-								totyr = 0;
-								minyr = ''
-								for (i = 0; i < stats.length; i++)
-								{
-									totyr = totyr + stats[i]['recent-count'];
-									if (minyr == '' || stats[i]['recent-min-date'] < minyr)
-									{
-										minyr = stats[i]['recent-min-date']
-									}
-								}
-								$scope.head_stat_tot2 = totyr + ' recent' //' since ' + $scope.get_date_display(minyr);
-								var frst = true;
-								for (i = 0; i < stats.length; i++)
+							}
+							$scope.head_stat_tot2 = totyr + ' recent' //' since ' + $scope.get_date_display(minyr);
+							var frst = true;
+							for (i = 0; i < stats.length; i++)
+							{
+								if (stats[i]['recent-avg-price'] > 0)
 								{
 									if (!frst)
 									{	
 										$scope.head_stat_avgs = $scope.head_stat_avgs + ', ';
 									}
+									else
+									{
+										$scope.head_stat_avgs = 'Revcently, ';
+									}
 									$scope.head_stat_avgs = $scope.head_stat_avgs + stats[i]['beer']['type'] + ' is ' + $scope.home_ccy_symbol + $scope.get_number_display(stats[i]['recent-avg-price'], 2);
 									frst = false;
 								}
-/*								if ($scope.home_country == 'United Kingdom')
-								{
-									var params = 'style=small';
-									params = params + '&pubCountry=' + $scope.home_country;
-									params = params + '&pubCity=Greater London'
-									$scope.http_get($scope.service_path + '/beerpricestats/BeerTypeAndPubTypeAndCity', params, function(response)
-										{
-											stats = response.data['beer-price-stats'];
-											$scope.head_stat_ldntot = 0;
-											$scope.head_stat_ldntotyr = 0;
-											if (stats.length>0)
-											{
-												$scope.head_stat_ldnavgs = '';
-												var frst = true;
-												var tot = 0;
-												for (i = 0; i < stats.length; i++)
-												{
-													tot = tot + stats[i]['count'];
-												}
-												$scope.head_stat_ldntot = tot
-												for (i = 0; i < stats.length; i++)
-												{
-													for (y = 0; y < stats[i]['by-year'].length; y++)
-													{
-														if (stats[i]['by-year'][y]['year'] == new Date().getFullYear())
-														{
-															$scope.head_stat_ldntotyr = stats[i]['by-year'][y]['count']
-															if (!frst)
-															{	
-																$scope.head_stat_ldnavgs = $scope.head_stat_ldnavgs + ', ';
-															}
-															$scope.head_stat_ldnavgs = $scope.head_stat_ldnavgs + stats[i]['beer']['type'] + ' is ' + $scope.home_ccy_symbol + $scope.get_number_display(stats[i]['by-year'][y]['avg-price'], 2);
-															frst = false;
-														}
-													}
-												}
-											}
-										});
-								}
-*/
+							}
+							if ($scope.head_stat_tot ==0)
+							{
+								$scope.head_stat_avgs = 'Be the first to record a pub pint price'
+							}
+							else if (totyr ==0)
+							{
+								$scope.head_stat_avgs = 'No recent pub pint prices'
 							}
 						});
 				}
 
 				$scope.set_location = function(coords)
 				{
-					$scope.home_country = '';
-					$scope.home_city = '';
-					$scope.home_town = '';
-					$scope.home_pc = '';
 		    		$http.get('https://maps.googleapis.com/maps/api/geocode/json?latlng=' + coords + '&key=AIzaSyDB-gk_9KWXlZ7eWj-SYToR8v5DTTI6T00').
 						then(function(response)
 						{
+							$scope.home_country = '';
+							$scope.home_city = '';
+							$scope.home_town = '';
+							$scope.home_pc = '';
 							for (res in response.data.results)
 							{
 								for (add_comp in response.data.results[res]['address_components'])
@@ -1072,10 +1075,11 @@
 							{
 								$scope.home_city = $scope.home_town;
 							}
-							console.log($scope.home_country+ ','+$scope.home_city+','+$scope.home_town+','+$scope.home_pc);
-							$scope.upd_location_stats()
-			  		});
-
+							$scope.upd_location_stats();
+						}, 
+						function(response) 
+						{
+						});
 				}
 
 				$scope.login = function()
@@ -1159,45 +1163,14 @@
 											$scope.home_ccy = response.data['ref-data-country'][ctry].ccy;
 										}
 									}
-
-
 									$scope.logginin = false;
 									$scope.loggedin = true;
-
-									$scope.working_head_stats = true;
-									var stats = [];
-
-									$scope.head_stat_tot = 0;
-									$scope.head_stat_totyr = 0;
-									$scope.head_stat_avgs = '';
-
-									url = $scope.service_path + '/refdata/ccy';
-									$scope.http_get(url, '', function(response)
-										{
-											$scope.frm_prices.ccy_list = response.data['ref-data-ccy'];
-											for (ccy in $scope.frm_prices.ccy_list)
-											{
-												if ($scope.frm_prices.ccy_list[ccy].code == $scope.home_ccy)
-												{
-													$scope.home_ccy_symbol = $scope.frm_prices.ccy_list[ccy].symbol;
-													if ($scope.home_ccy_symbol.length > 1)
-													{
-														$scope.home_ccy_symbol = $scope.home_ccy_symbol + ' ';
-													}
-												}	
-											}
-											$scope.frm_prices.display_ccy = $scope.home_ccy;
-											$scope.frm_prices.display_ccy_symbol = $scope.home_ccy_symbol;
-											$scope.frm_prices.display_fxrate = 1
-
-											url = $scope.service_path + '/beerprice';
-											$scope.http_get(url, 'page=1&pageSize=5&pubCountry=' + $scope.home_country, function(response)
-												{
-													$scope.head_stat_latest = response.data['beer-price'];
-												});
-											$scope.working_head_stats = false
-											$scope.upd_location_stats()
-										});
+									$scope.upd_location_stats()
+								}, 
+								function(response)
+								{
+									$scope.logginin = false;
+									$scope.loggedin = true;
 								});
 						});
 				}
@@ -1725,7 +1698,11 @@
 			{
 				var coords = position.coords.latitude + ',' + position.coords.longitude;
 			    console.log('coords=' + coords)
-				angular.element(document.querySelector('[ng-controller="appCtrl"]')).scope().set_location(coords);
+				setTimeout(() => {
+				  angular.element(document.querySelector('[ng-controller="appCtrl"]'))
+					.scope()
+					.set_location(coords);
+				}, 500);
 			}
 			
 		</script>
