--- a/home/index.html
+++ b/home/index.html
@@ -945,6 +945,18 @@
 
 				$scope.upd_location_stats = function()
 				{
+					$scope.frm_prices.pub_country = $scope.home_country;
+					$scope.upd_prices_pub_country();
+					$scope.frm_prices.pub_city = $scope.home_city;
+					$scope.upd_prices_pub_city();
+					$scope.frm_prices.pub_town = $scope.home_town;
+					$scope.upd_prices_pub_town();
+
+					$scope.frm_pub.country = $scope.home_country;
+					$scope.frm_pub.city = $scope.home_city;
+					$scope.frm_pub.town = $scope.home_town;
+					$scope.frm_pub.pc = $scope.home_pc;
+
 					for (ctry in $scope.country_list)
 					{
 						if ($scope.country_list[ctry].name == $scope.home_country)
@@ -1047,39 +1059,59 @@
 
 				$scope.set_location = function(coords)
 				{
-		    		$http.get('https://maps.googleapis.com/maps/api/geocode/json?latlng=' + coords + '&key=AIzaSyDB-gk_9KWXlZ7eWj-SYToR8v5DTTI6T00').
-						then(function(response)
-						{
-							$scope.home_country = '';
-							$scope.home_city = '';
-							$scope.home_town = '';
-							$scope.home_pc = '';
-							for (res in response.data.results)
+					if (1 == 0)
+					{
+						$scope.home_country = 'United Kingdom';
+						$scope.home_city = 'Greater London';
+						$scope.home_town = 'London';
+						$scope.home_country = 'United Kingdom';
+						$scope.home_city = 'ABC	';
+						$scope.home_town = 'CDE';
+						$scope.home_country = 'Germany';
+						$scope.home_city = 'Berlin';
+						$scope.home_town = 'Berlin';
+						$scope.home_country = 'Netherlands';
+						$scope.home_city = 'Government of Amsterdam';
+						$scope.home_town = 'Amsterdam';
+						$scope.home_pc = '';
+						$scope.upd_location_stats();
+					}
+					else
+					{
+						$http.get('https://maps.googleapis.com/maps/api/geocode/json?latlng=' + coords + '&key=AIzaSyDB-gk_9KWXlZ7eWj-SYToR8v5DTTI6T00').
+							then(function(response)
 							{
-								for (add_comp in response.data.results[res]['address_components'])
+								$scope.home_country = '';
+								$scope.home_city = '';
+								$scope.home_town = '';
+								$scope.home_pc = '';
+								for (res in response.data.results)
 								{
-									address = response.data.results[res]['address_components'][add_comp];
-									if (address['types'][0] == 'country')
-										$scope.home_country = address['long_name'];
-									else if (address['types'][0] == 'administrative_area_level_2')
-										$scope.home_city = address['long_name'];
-									else if (address['types'][0] == 'postal_town')
-										$scope.home_town = address['long_name'];
-									else if (address['types'][0] == 'locality')
-										$scope.home_town = address['long_name'];
-									else if (address['types'][0] == 'postal_code')
-										$scope.home_pc = address['long_name'];
+									for (add_comp in response.data.results[res]['address_components'])
+									{
+										address = response.data.results[res]['address_components'][add_comp];
+										if (address['types'][0] == 'country')
+											$scope.home_country = address['long_name'];
+										else if (address['types'][0] == 'administrative_area_level_2')
+											$scope.home_city = address['long_name'];
+										else if (address['types'][0] == 'postal_town')
+											$scope.home_town = address['long_name'];
+										else if (address['types'][0] == 'locality')
+											$scope.home_town = address['long_name'];
+										else if (address['types'][0] == 'postal_code')
+											$scope.home_pc = address['long_name'];
+									}
 								}
-							}
-							if ($scope.home_city == '')
+								if ($scope.home_city == '')
+								{
+									$scope.home_city = $scope.home_town;
+								}
+								$scope.upd_location_stats();
+							}, 
+							function(response) 
 							{
-								$scope.home_city = $scope.home_town;
-							}
-							$scope.upd_location_stats();
-						}, 
-						function(response) 
-						{
-						});
+							});
+					}
 				}
 
 				$scope.login = function()
@@ -1143,18 +1175,6 @@
 							$scope.http_get(url, '', function(response)
 								{
 									$scope.country_list = response.data['ref-data-country'];
-									$scope.frm_prices.pub_country = $scope.home_country;
-									$scope.upd_prices_pub_country();
-									$scope.frm_prices.pub_city = $scope.home_city;
-									$scope.upd_prices_pub_city();
-									$scope.frm_prices.pub_town = $scope.home_town;
-									$scope.upd_prices_pub_town();
-
-									$scope.frm_pub.country = $scope.home_country;
-									$scope.frm_pub.city = $scope.home_city;
-									$scope.frm_pub.town = $scope.home_town;
-									$scope.frm_pub.pc = $scope.home_pc;
-
 
 									for (ctry in response.data['ref-data-country'])
 									{
