--- a/home/index.html
+++ b/home/index.html
@@ -112,8 +112,8 @@
 										<div class="col">
 											<h4>
 												<span ng-show="working_head_stats" class="spinner-border spinner-border-sm text-warning ms-1 me-1"></span>
-												<span ng-show="!working_head_stats" class="text-warning">{{head_stat_tot}} ({{head_stat_tot2}})</span>
-												<span class="text-warning">pint prices in</span>
+												<span ng-show="!working_head_stats" class="text-warning">{{get_number_display(head_stat_tot, 0)}} ({{get_number_display(head_stat_tot2, 0)}} recent)</span>
+												<span class="text-warning">pint prices in pubs in </span>
 												<span ng-show="working_head_stats" class="spinner-border spinner-border-sm text-warning ms-1 me-1"></span>
 												<span ng-show="!working_head_stats">
 													<span ng-show="home_town.length==0 && home_city.length>0" class="text-warning">{{home_city}}<span class="text-muted">, {{home_country}}</span></span>
@@ -528,7 +528,8 @@
 					
 					$scope.token = null;
 					
-					$scope.head_stat_1 = 0;
+					$scope.head_stat_tot = 0;
+					$scope.head_stat_tot2 = 0;
 					$scope.head_stat_avgs = '';
 					$scope.head_stat_latest = '';
 					$scope.working_head_stats = false
@@ -993,7 +994,7 @@
 							$scope.working_head_stats = false
 						});
 
-					console.log($scope.home_country+ ','+$scope.home_city+','+$scope.home_town+','+$scope.home_pc, +','+ $scope.home_ccy_symbol + $scope.home_ccy);
+					console.log($scope.home_country+ ','+$scope.home_city+','+$scope.home_town+','+$scope.home_pc +','+ $scope.home_ccy_symbol +','+ $scope.home_ccy);
 
 					var params = 'style=small';
 					params = params + '&pubCountry=' + $scope.home_country;
@@ -1014,6 +1015,7 @@
 							stats = response.data['beer-price-stats'];
 							$scope.head_stat_avgs = '';
 							$scope.head_stat_tot = 0;
+							$scope.head_stat_tot2 = 0
 							for (i = 0; i < stats.length; i++)
 							{
 								$scope.head_stat_tot = $scope.head_stat_tot + stats[i]['count'];
@@ -1028,7 +1030,8 @@
 									minyr = stats[i]['recent-min-date']
 								}
 							}
-							$scope.head_stat_tot2 = totyr + ' recent' //' since ' + $scope.get_date_display(minyr);
+							$scope.head_stat_tot2 = totyr //' since ' + $scope.get_date_display(minyr);
+
 							var frst = true;
 							for (i = 0; i < stats.length; i++)
 							{
@@ -1048,32 +1051,32 @@
 							}
 							if ($scope.head_stat_tot ==0)
 							{
-								$scope.head_stat_avgs = 'Be the first to record a pub pint price'
+								$scope.head_stat_avgs = 'Be the first to record a pint price in a pub'
 							}
 							else if (totyr ==0)
 							{
-								$scope.head_stat_avgs = 'No recent pub pint prices'
+								$scope.head_stat_avgs = 'No recent pint prices in a pubs'
 							}
 						});
 				}
 
 				$scope.set_location = function(coords)
 				{
-					if (1 == 0)
+					if (1 == 1)
 					{
-						$scope.home_country = 'United Kingdom';
-						$scope.home_city = 'Greater London';
-						$scope.home_town = 'London';
-						$scope.home_country = 'United Kingdom';
-						$scope.home_city = 'ABC	';
-						$scope.home_town = 'CDE';
 						$scope.home_country = 'Germany';
 						$scope.home_city = 'Berlin';
 						$scope.home_town = 'Berlin';
+						$scope.home_pc = '';
+						$scope.home_country = 'United Kingdom';
+						$scope.home_city = 'ABC	';
+						$scope.home_town = 'CDE';
+						$scope.home_country = 'United Kingdom';
+						$scope.home_city = 'Greater London';
+						$scope.home_town = 'London';
 						$scope.home_country = 'Netherlands';
 						$scope.home_city = 'Government of Amsterdam';
 						$scope.home_town = 'Amsterdam';
-						$scope.home_pc = '';
 						$scope.upd_location_stats();
 					}
 					else
@@ -1154,43 +1157,36 @@
 									}
 									$scope.frm_pub.type = 'Pub'
 									$scope.upd_prices_pub_type();
-								});
 
-							url = $scope.service_path + '/refdata/beertype';
-							$scope.http_get(url, '', function(response)
-								{
-									$scope.frm_prices.beer_type_list = [];
-									$scope.frm_beer.type_list = [];
-									for (beertypei in response.data['ref-data-beer-type'])
+								url = $scope.service_path + '/refdata/beertype';
+								$scope.http_get(url, '', function(response)
 									{
-										beertype = response.data['ref-data-beer-type'][beertypei]
-										$scope.frm_prices.beer_type_list.push(beertype);
-										$scope.frm_beer.type_list.push(beertype);
-									}
-									$scope.frm_beer.type = 'Lager'
-									$scope.upd_prices_beer_type();
-								});
-
-							url = $scope.service_path + '/refdata/country';
-							$scope.http_get(url, '', function(response)
-								{
-									$scope.country_list = response.data['ref-data-country'];
-
-									for (ctry in response.data['ref-data-country'])
-									{
-										if (response.data['ref-data-country'][ctry].name == $scope.home_country)
+										$scope.frm_prices.beer_type_list = [];
+										$scope.frm_beer.type_list = [];
+										for (beertypei in response.data['ref-data-beer-type'])
 										{
-											$scope.home_ccy = response.data['ref-data-country'][ctry].ccy;
+											beertype = response.data['ref-data-beer-type'][beertypei]
+											$scope.frm_prices.beer_type_list.push(beertype);
+											$scope.frm_beer.type_list.push(beertype);
 										}
-									}
-									$scope.logginin = false;
-									$scope.loggedin = true;
-									$scope.upd_location_stats()
-								}, 
-								function(response)
-								{
-									$scope.logginin = false;
-									$scope.loggedin = true;
+										$scope.frm_beer.type = 'Lager'
+										$scope.upd_prices_beer_type();
+
+										url = $scope.service_path + '/refdata/country';
+										$scope.http_get(url, '', function(response)
+											{
+												$scope.country_list = response.data['ref-data-country'];
+
+												url = $scope.service_path + '/refdata/ccy';
+												$scope.http_get(url, '', function(response)
+													{
+														$scope.frm_prices.ccy_list = response.data['ref-data-ccy'];
+														$scope.logginin = false;
+														$scope.loggedin = true;
+														$scope.upd_location_stats()
+													});
+											});
+									});
 								});
 						});
 				}
@@ -1385,7 +1381,7 @@
 								tot = tot + response.data['beer-price-stats'][p].count;
 								yrtot = yrtot + response.data['beer-price-stats'][p]['recent-count'];
 							}
-							$scope.get_prices_info = response.data['beer-price-stats'].length + ' summaries from ' + tot + ' prices (' + yrtot + ' recent) ' + $scope.prices_criteria();
+							$scope.get_prices_info = $scope.get_number_display(response.data['beer-price-stats'].length, 0) + ' summaries from ' + $scope.get_number_display(tot, 0) + ' prices (' + $scope.get_number_display(yrtot, 0) + ' recent) ' + $scope.prices_criteria();
 							$scope.working_get_prices = false;
 						}, 
 						function(response) 
@@ -1414,7 +1410,7 @@
 					$scope.http_get(url, params, function(response)
 						{
 							$scope.price_data = response.data;
-							$scope.get_prices_info = response.data['beer-price'].length  + ' prices ' + $scope.prices_criteria();
+							$scope.get_prices_info = $scope.get_number_display(response.data['beer-price'].length, 0)  + ' prices ' + $scope.prices_criteria();
 							$scope.working_get_prices = false;
 						}, 
 						function(response) 
