--- a/home/index.html
+++ b/home/index.html
@@ -366,7 +366,7 @@
 											<div class="col" ng-show="working_get_prices">
 												<span class="spinner-border spinner-border-sm text-warning ms-1 me-1"></span>
 											</div>
-											<div class="col" ng-show="!working_get_prices && get_price_err.length>0">
+											<div class="col" ng-show="!working_get_prices && get_prices_err.length>0">
 												<span class="text-danger">{{get_prices_err}}</span>
 											</div>
 											<div class="col" ng-show="!working_get_prices && get_prices_info.length>0">
@@ -918,13 +918,14 @@
 			    {
 			    	if ($scope.frm_prices.display_ccy != null)
 			    	{
-				    	$scope.frm_prices.display_fxrate = 1;
+						$scope.frm_prices.display_fxrate = 1;
 						if ($scope.frm_prices.ccy != $scope.frm_prices.display_ccy)
 						{
+							$scope.frm_prices.display_fxrate = 0;
 							url = $scope.service_path + '/fxrate/' + $scope.frm_prices.ccy + $scope.frm_prices.display_ccy;
 							$scope.http_get(url, 'latest=Y', function(response)
 								{
-									if (response.data['fx-rate'] !== undefined)
+									if (response.data['fx-rate'].length > 0)
 									{
 										$scope.frm_prices.display_fxrate = response.data['fx-rate']['rate'];
 									}
@@ -941,6 +942,15 @@
 								}
 							}
 						}
+					}
+					if ($scope.frm_prices.display_fxrate == 0)
+					{
+						$scope.add_price_err = '';
+						$scope.add_price_info = '';
+						$scope.get_prices_info = '';
+						$scope.price_stat_data = '';
+						$scope.price_data = '';
+						$scope.get_prices_err = 'No FX rate!'
 					}
 			    }
 
@@ -1062,7 +1072,7 @@
 
 				$scope.set_location = function(coords)
 				{
-					if (1 == 1)
+					if (1 == 0)
 					{
 						$scope.home_country = 'Germany';
 						$scope.home_city = 'Berlin';
