--- a/home/index.html
+++ b/home/index.html
@@ -952,6 +952,15 @@
 						$scope.price_data = '';
 						$scope.get_prices_err = 'No FX rate!'
 					}
+					else
+					{
+						$scope.add_price_err = '';
+						$scope.add_price_info = '';
+						$scope.get_prices_info = '';
+						$scope.price_stat_data = '';
+						$scope.price_data = '';
+						$scope.get_prices_err = '';
+					}
 			    }
 
 				$scope.upd_location_stats = function()
